<resources>
    <string name="app_name">Abomo</string>
    <string name="deone_studio">Deone Studio</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="connexion">CONNEXION</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="conf_mot_de_passe">Confirmez le mot de passe</string>
    <string name="mot_de_passe_oublli">Mot de passe oubllié</string>
    <string name="ajouter_une_photo_de_profile">Ajouter une photo de profile</string>
    <string name="nom_complet">Nom complet</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="submit_conditions_message">La soumission de ce formulaire implique vous ayez accepter les conditions d\'utilisation de l\'application!</string>
    <string name="camera">Caméra</string>
    <string name="gallery">Gallérie</string>
    <string name="selectionner_une_image">Ou sélectionner une image ?</string>
    <string name="enable_camera_storage_permissions">Enable camera storage permissions</string>
    <string name="enable_storage_permissions">Enable storage permissions</string>
    <string name="confMotdepasse_error">Les mots de passe ne correspondent pas!</string>
    <string name="motdepasse_error">Erreur lors de la saisie du mot de passe!</string>
    <string name="utilisateur_error">Erreur lors de la saisie de l\'utilsateur!</string>
    <string name="telephone_error">Erreur lors de la saisie du téléphone!</string>
    <string name="nomComplet_error">Erreur lors de la saisie du nom complet!</string>
    <string name="connexion_user">Patientez, pendant la connexion de l\'utilisateur</string>
    <string name="sign_in_ok">Utilisateur connecté avec succès</string>
    <string name="sign_in_error">Erreur lors de la connexion de l\'utilisateur</string>
    <string name="create_user">Patientez, pendant la création de l\'utilisateur</string>
    <string name="no_user">Aucun utilisateur trouvé</string>
    <string name="create_account_error">Erreur lors de la création du compte de l\'utilisateur</string>
    <string name="save_user">Patientez, pendant l\'ajout de l\'utilisateur</string>
    <string name="save_user_info_ok">Ajout de l\'utilisateur éffectué avec succès</string>
    <string name="add_image_message">Patientez, pendant l\'ajout de l\'image de l\'utilisateur %s</string>
    <string name="save_image_ok">Sauvegarde de l\'image %s éffectuée avec succès</string>
    <string name="param_tres">Paramètres</string>
    <string name="a_propos">A propos</string>
    <string name="sign_out">Voulez-vous quitter l\'application ?</string>
    <string name="search_ask">Voulez-vous créer une recherche pour : %s ?</string>
    <string name="del_post">Voulez-vous supprimer cette publication ?</string>
    <string name="delete_post">Voulez-vous supprimer le post ?</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="creer">Créer votre compte</string>
    <string name="ajouter_un_immeuble">Ajouter un post</string>
    <string name="titre_de_l_immeuble">Titre de l\'post</string>
    <string name="description_immeuble">En plus de 5 ans d’expérience j’ai pu faire valoir mon savoir-faire technique. J’ai aussi acquis des connaissances importantes en management et j’ai pu implémenter des méthodologies et des techniques nouvelles de travail. J’aime notemment le travail bien fait, e travail collaboratif ainsi que le “Learn by doing” qui me permet de gagner en temps dans l’acquisition de nouvelles compétences et connaissances techniques sur n’importe quel sujet en relation avec mon travail. Me recruter dans une de vos équipes de travail ne vous sera que profitable car vous aurez avec vous non seulement quelqu’un qui connait son travail mais aussi quelqu’un qui sait se remettre en question pour mieux se mettre à jour.</string>
    <string name="couverture_de_l_immeuble">Couverture de l\'post</string>
    <string name="rechercher">Rechercher</string>
    <string name="description">Description</string>
    <string name="titre">Titre</string>
    <string name="titre_error">Erreur lors de la saisie du titre</string>
    <string name="description_error">Erreur lors de la saisie de la description</string>
    <string name="supprimer_cette_publication">Supprimer cette publication</string>
    <string name="signaler_cette_publication">Signaler cette publication</string>
    <string name="details_de_la_publication">Details de la publication</string>
    <string name="visibilit_de_la_gallerie">Visibilité de la gallerie</string>
    <string name="notifications">Notifications</string>
    <string name="post_cover">Post cover</string>
    <string name="gestion">Gestion</string>
    <string name="statistiques">Statistiques</string>
    <string name="custom_post_titre">%s : %s (Publié le %s)</string>
    <string name="nom_utilisateur">Nom de l\'utilisateur</string>
    <string name="delete_success">Suppression réussie</string>
    <string name="comparer">Comparer cette publication</string>
    <string name="estimer">Estimer cette publication</string>
    <string name="info_compte">Demander infos compte</string>
    <string name="iam_xpert">Mode expert immo</string>
    <string name="theme_mode">Theme (%s)</string>
    <string name="mode_dark">Mode nuit</string>
    <string name="mode_day">Mode jour</string>
    <string name="nbre_vues">%s vues</string>
    <string name="nbre_jaimes">%s j\'aimes</string>
    <string name="nbre_commentaires">%s commentaires</string>
    <string name="stop_load">Arreter le téléchargement</string>
    <string name="publication">PUBLICATION</string>
    <string name="maj_gallery">GALLERIE</string>
    <string name="maj_commentaires">COMMENTAIRES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_infos">Publication %s du %s</string>
    <string name="send_comment">Envoyer votre commentaire</string>
    <string name="votre_commentaire">Votre commentaire</string>
    <string name="post_images">La gallérie de la publication</string>
    <string name="post_comments">Les commentaires sur le publication</string>
    <string name="notif_comment">Notifications des commentaires</string>
    <string name="delete_this_post">Supprimer cette publication</string>
    <string name="signaler_this_post">Signaler cette publication</string>
    <string name="show_gallery">Afficher la gallérie</string>
    <string name="noter_post">Noter cette publication</string>
    <string name="ajouter_image">Ajouter une image</string>
    <string name="travaux_amenagements">Travaux d\'aménagement</string>
    <string name="locataire">Locataire</string>
    <string name="negociation">Négociation</string>
    <string name="commentaires">Commentaires</string>
    <string name="unjaime">Voulez-vous ne plus aimer cette publication</string>
    <string name="error_comment">Votre commentaire est vide!</string>
    <string name="success_comment">Commentaire ajoutée</string>
    <string name="vous">vous</string>
    <string name="ajouter_une_image">Ajouter une image</string>
    <string name="image_item">Une image</string>
    <string name="image_titre">Titre de l\'image</string>
    <string name="image_description">Mon rôle en tant que IT MANAGER à VIP CALL CENTER est de planifier, coordonner et gérer leurs systèmes d’information.C’est en ce sens que je suis responsable de l’infrastructure IT, des serveurs aux réseaux en passant par les postes de travail. Je m’assure donc que le personnel dispose du matériel et des logiciels nécessaires à l’exécution de ses tâches et que ces systèmes disposent de connexions réseau en bon état de fonctionnement. J’analyse les besoins</string>
    <string name="add_image">Ajouter cet image</string>
    <string name="image_error">Vous n\'avez pas choisi d\'image!</string>
    <string name="success_image">Image ajoutée</string>
    <string name="notation">Notation</string>
    <string name="comparaison">Comparer</string>
    <string name="estimation">Estimer</string>
    <string name="gestion_immobiliere">Gestion immobilière</string>
    <string name="all_comments">Tous les commentaires</string>
    <string name="favory_comment">Les commentaires de mes favories</string>
    <string name="signale_comment">Les commentaires de mes signalements</string>
    <string name="share_comment">Les commentaires de mes partages</string>
    <string name="jaime_comment">Les commentaires de mes j\'aimes</string>
    <string name="all_gallery">Gallerie ouverte à tous</string>
    <string name="abonnes_gallery">Gallerie ouverte aux abonnés</string>
    <string name="jaime_gallery">Gallerie ouverte à ceux qui aiment la publication</string>
    <string name="annuler">Annuler</string>
    <string name="noter">Envoyer votre note</string>
    <string name="no_note">Vous n\'avez mis aucune note</string>
    <string name="informations_publication">Informations publication</string>
    <string name="n_photos">Il y\'a %s dans la gallérie</string>
    <string name="add_note_success">Note ajoutée avec succès</string>
    <string name="update_note_success">Note mise à jour avec succès</string>
    <string name="app_language">Language (Francais)</string>
    <string name="select_language">Sellectionner une langue</string>
    <string name="anglais">Anglais</string>
    <string name="francais">Français</string>
    <string name="choose_language">Choisir une langue</string>
    <string name="no_language_selected">Aucune langue sellectionnée</string>
    <string name="language_mode">Langue (%s)</string>
    <string name="info_post">Infos publication</string>
    <string name="get_notifications">Recevoir des notifications pour</string>
    <string name="custom_commentaires">Personnaliser les commentaires</string>
    <string name="custom_notifications">Personalliser les notifications</string>
    <string name="photos_visibility">Visibilité de la gallerie</string>
    <string name="publish_at">Publié le %s</string>
    <string name="publish_at_by">Publié le %s - Vue par %s personnes</string>
    <string name="ville">Ville</string>
    <string name="ville_error">Erreur lors de la saisie de la ville</string>
    <string name="no_raison">Vous n\'avez mis aucune raison</string>
    <string name="signaler_post">Signaler cette publication</string>
    <string name="raison_signalement">Raison du signalement</string>
    <string name="bloquer_utilisateur">Bloquer aussi l\'utilisateur</string>
    <string name="choose_expert">Choisissez une option</string>
    <string name="creer_post">Créer cette publication</string>
    <string name="iam_proprietaire">Je suis le propriétaire</string>
    <string name="iam_not_proprietaire">Je ne suis pas le propriétaire</string>
    <string name="pas_de_note">Pas de note disponible</string>
</resources>