<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackground"
    tools:context=".SignInActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivLogo"
        android:layout_margin="10dp"
        android:src="@drawable/lion"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_above="@+id/tvCreteAccoount"
        android:gravity="center_vertical"
        android:layout_below="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtvUtilisateur"
            android:hint="@string/utilisateur"
            android:drawableEnd="@drawable/ic_action_login"
            android:layout_margin="10dp"
            android:background="@drawable/redtv"
            android:inputType="text"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edtvMotdepasse"
            android:hint="@string/mot_de_passe"
            android:drawableEnd="@drawable/ic_action_lock"
            android:layout_margin="10dp"
            android:background="@drawable/redtv"
            android:inputType="textPassword"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:text="@string/mot_de_passe_oublli"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btSignIn"
            android:text="@string/connexion"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvCreteAccoount"
        android:layout_above="@+id/tvSignature"
        android:text="@string/cr_er_un_compte"
        android:textColor="@color/white"
        android:padding="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvSignature"
        android:text="@string/deone_studio"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>