<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackground"
    tools:context=".ShowPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/pageBackground">

        <RelativeLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/pageBackground">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/post_cover"
                android:scaleType="centerCrop"
                android:src="@drawable/lion" />

            <LinearLayout
                android:id="@+id/llActions"
                android:layout_below="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/showBackground"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvRapidGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_action_gallery" />

                <TextView
                    android:id="@+id/tvRapidWork"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_action_travaux" />

                <TextView
                    android:id="@+id/tvRapidJaime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_action_unjaime" />

                <TextView
                    android:id="@+id/tvRapidFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="44"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_action_unfavorite" />

                <TextView
                    android:id="@+id/tvRapidSignalement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_action_unsignaler" />

                <ImageButton
                    android:id="@+id/ibRapidPartage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_unpartage"
                    android:background="@null"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPost"
                style="@style/tv_settings_trois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llActions"
                android:text="@string/description_immeuble" />

            <TextView
                android:id="@+id/tvPhotos"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPost"
                android:text="@string/gallery"
                app:drawableEndCompat="@drawable/ic_action_gallery" />

            <TextView
                android:id="@+id/tvCommentaires"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPhotos"
                android:text="@string/commentaires"
                app:drawableEndCompat="@drawable/ic_action_uncomment" />

            <TextView
                android:id="@+id/tvNotifications"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCommentaires"
                android:text="@string/notifications"
                app:drawableEndCompat="@drawable/ic_action_notification" />

            <TextView
                android:id="@+id/tvNotations"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNotifications"
                android:text="@string/notation"
                app:drawableEndCompat="@drawable/ic_action_note" />

            <TextView
                android:id="@+id/tvComparaison"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNotations"
                android:text="@string/comparaison"
                app:drawableEndCompat="@drawable/ic_action_compare" />

            <TextView
                android:id="@+id/tvEstimation"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvComparaison"
                android:text="@string/estimation"
                app:drawableEndCompat="@drawable/ic_action_estimer" />

            <TextView
                android:id="@+id/tvGestionImmobiliere"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEstimation"
                android:text="@string/gestion_immobiliere"
                app:drawableEndCompat="@drawable/ic_action_gestion" />

            <TextView
                android:id="@+id/tvInformations"
                style="@style/tv_settings_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGestionImmobiliere"
                android:text="@string/informations_publication"
                app:drawableEndCompat="@drawable/ic_action_infos" />

            <TextView
                android:id="@+id/tvSignaler"
                style="@style/tv_settings_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvInformations"
                android:text="@string/signaler_this_post"
                app:drawableEndCompat="@drawable/ic_action_signaler" />

            <TextView
                android:id="@+id/tvSupprimer"
                style="@style/tv_settings_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSignaler"
                android:text="@string/delete_this_post"
                app:drawableEndCompat="@drawable/ic_action_supprimer" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>