<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/signaler_post"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/tvMessage"
        android:layout_below="@+id/tvTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        android:textColorHint="@color/gold"
        android:hint="@string/raison_signalement"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/cbSignale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:textColor="@color/white"
        android:text="@string/bloquer_utilisateur" />

    <Button
        android:id="@+id/btSignaler"
        android:layout_below="@+id/cbSignale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:text="@string/signaler_post"
        android:textColor="@color/white" />

</RelativeLayout>